syntax = "proto3";

package api.helloworld;
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
option go_package = "github.com/buffge/gobyexample/third/kratos/api/helloworld;helloworld";
option java_multiple_files = true;
option java_package = "api.helloworld";

service Helloworld {
  rpc CreateHelloworld (CreateHelloworldRequest) returns (CreateHelloworldReply);
  rpc UpdateHelloworld (UpdateHelloworldRequest) returns (UpdateHelloworldReply);
  rpc DeleteHelloworld (DeleteHelloworldRequest) returns (DeleteHelloworldReply);
  rpc GetHelloworld (GetHelloworldRequest) returns (GetHelloworldReply){
    option (google.api.http) = {
      get: "/buffge/test"
    };
  };
  rpc ListHelloworld (ListHelloworldRequest) returns (ListHelloworldReply);
}

message CreateHelloworldRequest {}
message CreateHelloworldReply {}

message UpdateHelloworldRequest {}
message UpdateHelloworldReply {}

message DeleteHelloworldRequest {}
message DeleteHelloworldReply {}

message GetHelloworldRequest {
  string name = 2 ;
  int32 age = 1 ;
}

message GetHelloworldReply {
  optional int32 code = 1;
  string msg = 2;
}

message ListHelloworldRequest {}
message ListHelloworldReply {}